test/sema/member_expr_assignment.dmz
// RUN: (dmz %s -res-dump 2>&1 || true) | filecheck %s
struct S {
    x: i32,
}
struct S2 {
    x: i32,
}

fn main() -> void {
    let s = S{x: 0};
    let s2 = S2{x: 0};

    s.x = 1;
    s2.x = s2;
    // CHECK: [[# @LINE - 1 ]]:12: error: assigned value type 'S2{}' doesn't match variable type 'i32'
}